# controle-estoque-lp1

./: .gitignore  CMakeLists.txt  README.md
include/: dadosEstoque.h  estoque.h  utilidades.h
src/: controleEstoque.c  dadosEstoque.c  estoque.c  utilidades.c
